# openapi-semantic-diff

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
examples/: README.md  base.yaml  changed.yaml  showcase.html  showcase.json  showcase.md  showcase.txt
src/: comparator.rs  formatter.rs  lib.rs  main.rs  model.rs  ref_resolver.rs
src/extension/: extensible_enum.rs  mod.rs
src/parser/: mod.rs  openapi30.rs  openapi31.rs
templates/: html.tera  json.tera  markdown.tera  text.tera
tests/: comparator_tests.rs  formatter_tests.rs
tests/fixtures/deprecated_operation/: changed.yaml
tests/fixtures/deprecated_parameter/: base.yaml  changed.yaml
tests/fixtures/deprecated_schema_property/: base.yaml  changed.yaml
tests/fixtures/empty/: spec.yaml
tests/fixtures/extensible_enum/: base.yaml  changed_addition.yaml  changed_removal.yaml
tests/fixtures/filter_severity/: base.yaml  changed.yaml
tests/fixtures/formatter/: additive.yaml  base.yaml  breaking.yaml  deprecated.yaml
tests/fixtures/new_endpoint/: base.yaml  changed.yaml
tests/fixtures/new_enum_value/: changed.yaml
tests/fixtures/new_optional_parameter/: changed.yaml
tests/snapshots/: formatter_tests__additive_text.snap  formatter_tests__breaking_html.snap  formatter_tests__breaking_json.snap  formatter_tests__breaking_markdown.snap  formatter_tests__breaking_only_text.snap  formatter_tests__breaking_text.snap  formatter_tests__deprecated_text.snap  formatter_tests__no_changes_text.snap  formatter_tests__showcase_markdown.snap
(+26 files in other folders)
